--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: minima
-logo: portrait.png
-google_analytics: UA-9578462-2
-title: Golnoosh Farnadi
-description: Assistant Professor at McGill University, Adjunct Professor at University of Montréal, Core Academic Member at MILA, Canada CIFAR AI (CCAI) Chair holder
+#logo: portrait.png
+#google_analytics: UA-9578462-2
+title: Dena Firoozi
+description: Assistant Professor at HEC Montréal
 
 
