--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #theme: minima
 #logo: portrait.png
 #google_analytics: UA-9578462-2
-#title: Dena Firoozi
+title: Instructor: Dena Firoozi
 description: Assistant Professor at HEC Montréal
 
 
