--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #theme: minima
 #logo: portrait.png
 #google_analytics: UA-9578462-2
-title: <a href="https://denafiroozi.github.io/DF/">Dena Firoozi</a>
+title: Instructor: <a href="https://denafiroozi.github.io/DF/">Dena Firoozi</a>
 description: Assistant Professor at HEC Montréal
 
 
