--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#theme: minima
+theme: minima
 #logo: portrait.png
 #google_analytics: UA-9578462-2
 title: <a href="https://denafiroozi.github.io/DF/">Instructor &#58; Dena Firoozi</a>
