--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #theme: minima
 #logo: portrait.png
 #google_analytics: UA-9578462-2
-title: <a href="https://denafiroozi.github.io/DF/">Instructor &#58; Dena Firoozi, Assistant Professor at HEC Montréal</a>
-#description: Assistant Professor at HEC Montréal
+title: <a href="https://jian-tang.com/">Instructor &#58; Jian Tang, Associate Professor at HEC Montréal</a>
+#description: Associate Professor at HEC Montréal
 
 
